# django-fastly-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: base.html
blog/templates/blog/: post_detail.html  post_list.html
django_fastly/: __init__.py  admin.py  api.py  apps.py  conf.py  middleware.py  models.py  signals.py  utils.py
django_fastly/management/commands/: fastly_update_vcl.py
django_fastly/migrations/: 0001_initial.py  0002_fastlyconfig_allow_full_cache_purges_and_more.py  0003_edgemodulecors.py  0004_remove_edgemodulecors_allowed_origins_and_more.py  0005_edgemoduledisablecache_nocacherule.py
example_project/: manage.py  requirements.txt
example_project/example_project/: middleware.py  settings.py  wsgi.py
